# minimal-browser

./: .gitlab-ci.yml  Cargo.toml  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
build-aux/: com.github.kdwk.MinimalBrowser.Devel.json
data/: com.github.kdwk.MinimalBrowser.desktop.in.in  com.github.kdwk.MinimalBrowser.gschema.xml.in  com.github.kdwk.MinimalBrowser.metainfo.xml.in.in
data/resources/: resources.gresource.xml
po/: POTFILES.in
src/: app.rs  main.rs  setup.rs
src/modals/: about.rs
