[package]
name = "minimal-browser"
version = "0.1.0"
authors = ["Kdwk <kdwkleung@proton.me>"]
edition = "2021"
publish = false

[profile.release]
lto = true

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
tracing = "0.1"
tracing-subscriber = "0.3"
relm4 = { version = "0.7.0-beta.1", features = ["libadwaita", "gnome_45", "macros"] }
webkit6 = "0.2.0"
